--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ ul {
 
 .error {
 	text-align: center;
-	background: transparent  url('../img/other-9.png') no-repeat center top;
+	background: transparent  url('../img/mountains-2.png') no-repeat center top;
 	background-size: cover;
 	display: block;
 	margin: auto;
@@ -188,9 +188,9 @@ ul {
 
 .home {
 	text-align: center;
-	background: transparent url('../img/other-9.png') no-repeat center center;
+	background: transparent url('../img/mountains-2.png') no-repeat center center;
 	background-size: cover;
-	padding: 8em 0;
+	padding: 14em 0;
 }
 
 .main-logo {
@@ -418,7 +418,7 @@ ul {
 .contact {
 	text-align: center;
 	padding: 4em 0 0;
-	background: transparent url('../img/other-9.png') no-repeat center center;
+	background: transparent url('../img/mountains-2.png') no-repeat center center;
 	background-size: cover;
 }
 .contact img {
@@ -567,8 +567,8 @@ ul {
 	}
 	
 	.home {
-		padding: 12em 0 12em; 
-		background: transparent url('../img/other-9.png') no-repeat center center;
+		padding: 22em 0 22em; 
+		background: transparent url('../img/mountains-2.png') no-repeat center center;
 	background-size: cover;
 	} 
 	
