--- a/css/main.css
+++ b/css/main.css
@@ -91,14 +91,14 @@ ul {
 	position: fixed;
 	background-color: rgba(255,255,255,1.00);
 	width: 100%;
-	height: 8em;
+	height: 6em;
 	z-index: 200;
 	text-align: center;
 }
 
 .nav-logo img {
-	width: 180px;
-	padding-top: 1.5em;
+	width: 130px;
+	padding-top: 1.2em;
 	background-color: rgba(0,0,0,0);
 }
 
@@ -124,7 +124,7 @@ ul {
 .nav-btn:link,
 .nav-btn:visited {
 	position: fixed;
-	top: 34.2px;
+	top: 18px;
 	right: 20px;
 	height: 60px;
 	width: 60px;
@@ -170,7 +170,7 @@ ul {
 
 .nav-top {
 	display: none;
-	top: 9.15em;
+	top: 6.85em;
 }
 
 .nav-top[data-state="expanded"] {
@@ -188,7 +188,7 @@ ul {
 
 .home {
 	text-align: center;
-	padding: 3em 0;
+	padding: 2.5em 0;
 }
 
 .main-logo {
@@ -389,6 +389,7 @@ ul {
 }
 
 .portfolio {
+	margin-top: -1em;
 	text-align: center;
 	line-height: 0;
 	-webkit-column-count: 4;
@@ -516,15 +517,15 @@ ul {
 	}
 	
 	.nav-logo img {
-		width: 200px;
+		width: 190px;
 		float: left;
-		padding-top: 1.3em;
+		padding-top: 1.5em;
 	}
 	
 	.nav-logo {
 		background-color: rgba(255,255,255,1.00);
 		height: 8em;
-		padding-left: 1.5em;
+		padding-left: 2.5em;
 	}
 	
 	.main-logo {
@@ -552,7 +553,7 @@ ul {
 	
 	.nav ul {
 		float: right;
-		padding-right: 3em;
+		padding-right: 3.5em;
 	}
 	
 	.nav a,
@@ -614,6 +615,9 @@ ul {
 }
 
 @media only screen and (min-width: 60em) {
+	.nav-logo {
+		padding-left: 3em;
+	}
 	.unit-l-1-4 {
 		width: 25%;
 	}
