--- a/css/main.css
+++ b/css/main.css
@@ -512,6 +512,7 @@ ul {
 
 .social {
 	width: 100%;
+	padding-bottom: 7em;
 }
 
 .social li {
@@ -646,6 +647,10 @@ ul {
 		padding: 9em 0 0;
 	}
 	
+	.social {
+		padding-bottom: 12em;
+	}
+	
 	.contact h1 {
 		font-size: 2.25em;
 	}
@@ -677,7 +682,7 @@ ul {
 		width: 25%;
 	}
 	
-		.unit-l-1-3 {
+	.unit-l-1-3 {
 		width: 33.33%;
 	}
 	
