added new gd page

--- a/css/main.css
+++ b/css/main.css
@@ -357,6 +357,14 @@ ul {
 
 /*-------------------------PORTFOLIO SECTION-------------------------*/
 
+.gd {
+	background-color: rgba(255,255,255,1.00);
+}
+
+.gd img {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+}
+
 .flexslider {
 	width: 100%;
 	position: absolute;
@@ -456,11 +464,15 @@ ul {
   position: relative;
 }
 
-.mySlides {
+.mySlides, .mySlides-gd {
 	text-align: center;
 }
 
-.mySlides img {
+.gd {
+	padding-bottom: 5em;
+}
+
+.mySlides img, .mySlides-gd img {
 	text-align: center;
 	max-width: 87%;
 }
@@ -505,8 +517,18 @@ ul {
 	padding: 10em 0 3em;
 }
 
-.recent h1 {
+.recent-gd {
+	text-align: center;
+	padding: 5em 0 1em;
+}
+
+.recent h1, .recent-gd h1 {
 	font-size: .875em;
+}
+
+.recent-gd h2 {
+	font-size: .75em;
+	padding-top: .5em;
 }
 
 /* Fading animation */
@@ -860,6 +882,7 @@ ul {
 	.nav-logo {
 		padding-left: 4em;
 	}
+	
 	.unit-l-1-4 {
 		width: 25%;
 	}
@@ -884,6 +907,13 @@ ul {
 @media only screen and (min-width: 50em) {
 	.mySlides img {
 		max-height: 500px;
+		max-width: 700px;
+	}
+}
+
+@media only screen and (min-width: 50em) {
+	.mySlides-gd img {
+		max-height: 650px;
 		max-width: 700px;
 	}
 }
