--- a/css/main.css
+++ b/css/main.css
@@ -315,7 +315,7 @@ ul {
 
 .about {
 	background-color: rgba(255,255,255,1.00);
-	padding: 5em 0 3em;
+	padding: 1.5934em 1.5em 3em;
 	text-align: centre;
 }
 
@@ -340,7 +340,7 @@ ul {
 }
 
 .about img {
-	width: 350px;
+	width: 100%;
 	margin: auto;
 	padding-bottom: 3em;
 }
@@ -788,6 +788,13 @@ ul {
 	
 	.portfolio2 {
 		margin-right: 3em;
+	}
+}
+
+@media only screen and (min-width: 40em) {
+	.about img { 
+		width: 400px;
+		text-align: center;
 	}
 }
 
